@@ -4,8 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <form string="Supplier Return Shipment" col="4" cursor="supplier">
     <label name="reference"/>
     <field name="reference"/>
-    <label name="code"/>
-    <field name="code"/>
+    <label name="number"/>
+    <field name="number"/>
     <label name="supplier"/>
     <field name="supplier"/>
     <label name="delivery_address"/>
