@@ -4,8 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <form string="Customer Shipment" col="4" cursor="customer">
     <label name="reference"/>
     <field name="reference"/>
-    <label name="code"/>
-    <field name="code"/>
+    <label name="number"/>
+    <field name="number"/>
     <label name="customer"/>
     <field name="customer"/>
     <label name="delivery_address"/>
